--- a/src/style.sass
+++ b/src/style.sass
@@ -6,6 +6,15 @@ $mainFontColor: #FFA07A
 body
   font-family: Roboto,sans-serif
 
+.main_header
+  text-align: center
+  margin-bottom: 100px
+
+.main_header a
+  display: inline-block
+  width: 200px
+
+
 .auth-form
   margin: 0 auto
   text-align: center
@@ -18,9 +27,14 @@ body
 .auth-form-label span
   display: inline-block
   width: 60px
+  color: $mainFontColor
+  margin-right: 40px
+  font-size: 1.5rem
 
 .auth-form-label input
   background-color: $mainFontColor
+  padding: 10px
+  font-size: 1.5rem
   border: none
   outline: none
   height: 30px
@@ -32,6 +46,7 @@ body
   outline: none
   background-color: #ffffff
   font-size: 1.5rem
+  color: $mainFontColor
 
 a
   display: inline-block
