- function add idea completed; - function fetching server to refresh main page after idea added completed; - button Back activated;

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ body {
 
 a {
   display: inline-block;
-  width: 150px;
+  padding: 10px;
   text-align: center;
   font-size: 1.5rem;
   text-decoration: none;
