--- a/src/style.sass
+++ b/src/style.sass
@@ -50,7 +50,8 @@ body
 
 a
   display: inline-block
-  width: 150px
+  //width: 150px
+  padding: 10px
   text-align: center
   font-size: 1.5rem
   text-decoration: none
