--- a/src/style.sass
+++ b/src/style.sass
@@ -47,7 +47,12 @@ body
   display: block
   margin: 10px
 
+.auth-form p
+  color: $mainFontColor
+  font-size: 1.5rem
 
+.auth-form a
+  background-color: $mainBGColor
 
 .auth-form-label span
   display: inline-block
