--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,15 @@ body {
   margin: 10px;
 }
 
+.auth-form p {
+  color: #B51D0A;
+  font-size: 1.5rem;
+}
+
+.auth-form a {
+  background-color: #EAD39C;
+}
+
 .auth-form-label span {
   display: inline-block;
   width: 60px;
