--- a/src/style.sass
+++ b/src/style.sass
@@ -1,10 +1,21 @@
-@font-face
-  font-family: Roboto, sans-serif
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400;500;600&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap')
 
-$mainFontColor: #B51D0A
-$mainBGColor: #EAD39C
-$buttonBGColor: #EAD39C
-$darkBGColor: #662225
+
+@font-face
+  font-family: Arial, sans-serif
+
+@font-face
+  font-family: Montserrat
+
+$mainFontColor: #55828b
+$mainBGColor: #f6fff8
+$darkBGColor: #364958
+$buttonHoverColor: #55828b
+$logoFont: 'Baloo Chettan 2'
+$basicFont: 'Montserrat'
+$deleteBlock: #87bba2
+
 
 #root
   display: flex
@@ -17,6 +28,43 @@ $darkBGColor: #662225
   max-width: 900px
   padding: 0 calc(50% - 450px)
 
+button
+  padding: 10px
+  text-align: center
+  font-size: 18px
+  text-decoration: none
+  color: $mainFontColor
+  border: none
+  background-color: $mainBGColor
+  border-radius: 10px
+  margin-left: 20px
+  width: fit-content
+  display: inline-block
+  font-weight: 500
+  &:hover
+    background-color: $buttonHoverColor
+    cursor: pointer
+    color: white
+
+.link-button
+  padding: 10px
+  text-align: center
+  font-size: 18px
+  text-decoration: none
+  color: $mainFontColor
+  border: none
+  background-color: $mainBGColor
+  border-radius: 10px
+  margin-left: 20px
+  width: fit-content
+  display: inline-block
+  font-weight: 500
+  &:hover
+    background-color: $buttonHoverColor
+    cursor: pointer
+    color: white
+
+
 .create-form
   padding: 30px
   background-color: $mainBGColor
@@ -25,10 +73,8 @@ $darkBGColor: #662225
   justify-content: center
 
 .create-idea-form
-  display: flex
-  flex-direction: column
   padding: 30px
-  width: 50%
+  width: 70%
 
 .create-idea-form input
   display: block
@@ -47,11 +93,17 @@ $darkBGColor: #662225
   font-size: 16px
   outline: none
   padding: 5px 10px
+  height: auto
+  font-family: $basicFont
+
+.save-block
+  display: flex
+  justify-content: space-between
 
 //#7D5E3C
 
 body
-  font-family: Roboto,sans-serif
+  font-family: $basicFont
   background-color: $darkBGColor
   margin: 0
   padding: 0
@@ -59,36 +111,54 @@ body
 .main
   background-color: $mainBGColor
   border-radius: 0 0 10px 10px
+  width: 100%
   padding: 30px
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-around
+  box-sizing: border-box
+  min-height: 300px
 
 .main_header
   text-align: center
-  //margin-bottom: 30px
   display: flex
-  justify-content: space-around
+  justify-content: space-between
   align-items: center
   color: $mainFontColor
-  border-bottom: 5px dotted $mainFontColor
+  border-bottom: 1px solid $darkBGColor
   background-color: $mainBGColor
-  padding: 30px
+  padding: 0 30px
   margin-top: 20px
   border-radius: 10px 10px 0 0
   max-width: 900px
   min-width: 760px
+  font-size: 20px
+
+.main_header h1
+  margin: 0
+
+.header-span
+  color: $darkBGColor
+  font-family: $logoFont
 
 .main_header a
   display: inline-block
-  background-color: $buttonBGColor
+  background-color: $mainBGColor
   //width: 200px
 
 .idea-item
   display: block
-  margin: 30px
+  margin-bottom: 30px
+  width: 40%
+  //height: fit-content
+  &:hover
+    background-color: $buttonHoverColor
+    color: #ffffff
 
 .auth-form
-  margin: 0 auto
+  margin: 20px auto
   text-align: center
-  border-radius: 0 0 10px 10px
+  border-radius: 10px
 
 .auth-form-label
   display: block
@@ -97,33 +167,43 @@ body
 .auth-form p
   color: $mainFontColor
   font-size: 18px
+  margin: 30px 0 0
+
 
 .auth-form a
   background-color: $mainBGColor
+  margin: 5px 0 0 0
+  border: none
+  &:hover
+    background-color: $buttonHoverColor
+    color: #ffffff
+
+.auth-form-label
+  display: block
 
 .auth-form-label span
-  display: inline-block
+  display: block
   width: 60px
   color: $mainFontColor
   margin-right: 40px
   font-size: 18px
 
 .auth-form-label input
-  background-color: $buttonBGColor
+  background-color: #ffffff
   padding: 10px
   font-size: 18px
   border: 1px solid $mainFontColor
   outline: none
-  height: 30px
   border-radius: 10px
 
 .auth-submit-button
-  border: 1px solid $mainFontColor
   border-radius: 10px
   outline: none
-  background-color: $buttonBGColor
+  background-color: $mainBGColor
   font-size: 18px
   color: $mainFontColor
+  width: fit-content
+  margin-left: 0
 
 .reg-form-wrapper
   margin: 0
@@ -140,34 +220,41 @@ body
   display: block
   margin: 10px 40px
 
+
 .reg_form label span
   display: inline-block
   width: 80px
   color: $mainFontColor
-  margin-right: 40px
   font-size: 18px
+  margin-top: 20px
 
 .reg_form label input
-  background-color: $buttonBGColor
+  background-color: white
   padding: 10px
   font-size: 18px
   border: 1px solid $mainFontColor
   outline: none
-  height: 30px
   border-radius: 10px
   display: block
   margin: 0 auto
+  width: 50%
 
 .reg_form button
-  border: 1px solid $mainFontColor
+  //border: 1px solid $mainFontColor
   border-radius: 10px
   outline: none
-  background-color: $buttonBGColor
+  //background-color: $mainBGColor
   font-size: 18px
   color: $mainFontColor
   margin-top: 20px
-  height: 70px
+  margin-left: 0
+  padding: 10px 20px
   margin-bottom: 20px
+  &:hover
+    background-color: $buttonHoverColor
+    color: #ffffff
+    opacity: 80%
+    outline: none
 
 a
   display: inline-block
@@ -179,13 +266,13 @@ a
   color: $mainFontColor
   border: 1px solid $mainFontColor
   border-radius: 10px
-  margin-left: 20px
+  //margin-left: 20px
 
 .settings-button
   width: 150px
   font-size: 18px
   color: $mainFontColor
-  background-color: $buttonBGColor
+  background-color: $mainBGColor
   border: 1px solid $mainFontColor
   border-radius: 10px
   //margin-left: 30px
@@ -208,16 +295,8 @@ a
   display: inline-block
   width: 150px
 
-.create-idea-form button
-  padding: 10px
-  text-align: center
-  font-size: 18px
-  text-decoration: none
-  color: $mainFontColor
-  border: 1px solid $mainFontColor
-  background-color: $buttonBGColor
-  border-radius: 10px
-  margin-left: 20px
+//.create-idea-form button
+
 
 .delete-idea-button
   padding: 10px
@@ -226,11 +305,9 @@ a
   text-decoration: none
   color: $mainFontColor
   border: 1px solid $mainFontColor
-  background-color: $buttonBGColor
+  background-color: $mainBGColor
   border-radius: 10px
   margin: 10px
-
-//Delete idea block
 
 .idea-box
   margin: 30px
@@ -240,15 +317,43 @@ a
   flex-direction: column
   text-align: center
   font-size: 16px
+  color: $mainFontColor
 
 .prove-delete-idea
-  width: 80%
+  width: 300px
   position: absolute
-  left: 10%
-  top: 20%
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
   background-color: $mainFontColor
   border-radius: 10px
   padding: 10px
+
+.delete-block
+  margin-top: 50px
+  display: flex
+  justify-content: space-around
+
+.prove-delete-idea p
+  color: white
+
+.create-button
+  color: #3b6064
+  font-weight: 600
+  font-size: 25px
+
+.delete-button
+  &:hover
+    background-color: #ff0000
+
+.cancel-button
+  //font-weight: 500
+  &:hover
+    background-color: $mainBGColor
+    color: $mainFontColor
+    opacity: 80%
+    outline: none
+
 
 //@media screen and (min-width: 761px)
 //
